methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
      avance(6)  
      if (estSurBiscuit()==true) {
        return true ;
      } else {
   	    return false ;
      }
      recule(6)
}
        
 